--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -26,7 +26,7 @@
     {% endif %}
 
     {% if sidebar.linkedin %}
-    <li class="linkedin"><i class="fab fa-linkedin"></i>
+    <li class="linkedin"><i class="fab fa-linkedin-in"></i>
       <a href="https://linkedin.com/in/{{ sidebar.linkedin }}" target="_blank">{{ sidebar.linkedin }}</a>
     </li>
     {% endif %}
