--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -3,10 +3,7 @@
 <section class="skills-section section">
 
   <h2 class="section-title">
-    <span class="fa-stack fa-xs">
-      <i class="fas fa-circle fa-stack-2x"></i>
-      <i class="fas fa-wrench fa-stack-1x fa-inverse"></i>
-    </span>
+    <span class="icon-holder"><i class="fas fa-rocket"></i></span>
     {{ skills.title }}
   </h2>
 
@@ -17,8 +14,10 @@
 
       <h3 class="level-title">{{ skill.name }}</h3>
 
-      <div class="level-bar">
-        <div class="level-bar-inner" data-level="{{ skill.level }}">
+      <div class="progress level-bar">
+        <div class="theme-progress-bar" role="progressbar"
+             style="width: {{ skill.level }}%" aria-valuenow="{{ skill.level }}"
+             aria-valuemin="0" aria-valuemax="100" >
         </div>
       </div><!--//level-bar-->
 
