--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,10 +1,8 @@
-/* ======= Base ======= */
 body {
     font-family: 'Roboto', sans-serif;
     color: $text-color-secondary;
     background: $smoky-white;
     font-size: 14px;
-    padding: 30px;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
@@ -15,9 +13,11 @@ h1, h2, h3, h4, h5, h6  {
 
 a {
     color: darken($theme-color, 15%);
+
     &:hover {
         text-decoration: underline;
         color: darken($theme-color, 30%);
+        @include transition (all 0.4s ease-in-out);
     }
     &:focus {
         text-decoration: none;
@@ -30,8 +30,9 @@ p {
 
 .wrapper {
     background:$theme-color;
-    max-width: 1000px;
+    max-width: 960px;
     margin: 0 auto;
+    margin-top: 30px;
     position: relative;
     @include box-shadow(0px 2px 4px rgba(0,0,0,0.1));
 }
@@ -40,7 +41,7 @@ p {
     background: $theme-color;
     position: absolute;
     right: 0;
-    width: 280px;
+    width: 240px;
     height: 100%;
     min-height: 800px;
     color: #fff;
@@ -49,7 +50,6 @@ p {
     }
     .profile-container {
         padding: 30px;
-        //background: darken($theme-color, 10%);
         background: rgba(0, 0, 0, 0.2);
         text-align: center;
         color: #fff;
@@ -70,17 +70,8 @@ p {
     .profile {
         margin-bottom: 15px;
     }
-
-    .avatar {
-        //used for profile image
-        max-width: 100px;
-        margin-bottom: 15px;
-        border: 0px solid #fff;
-        border-radius: 100%;
-        box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
-    }
     .contact-list {
-        .fas, .fab {
+        .svg-inline--fa {
             margin-right: 5px;
             font-size: 18px;
             vertical-align: middle;
@@ -89,6 +80,11 @@ p {
             margin-bottom: 15px;
             &:last-child {
                 margin-bottom: 0;
+            }
+        }
+        .email {
+            .svg-inline--fa  {
+                font-size: 14px;
             }
         }
     }
@@ -119,6 +115,7 @@ p {
             font-weight: 500;
             margin-bottom: 0px;
             margin-top: 0;
+            font-size: 14px;
         }
         .time {
             color: rgba(256, 256, 256, 0.6);
@@ -156,7 +153,7 @@ p {
 .main-wrapper {
     background: #fff;
     padding: 60px;
-    padding-right: 340px;
+    padding-right: 300px;
     .section-title {
         text-transform: uppercase;
         font-size: 20px;
@@ -165,12 +162,29 @@ p {
         position: relative;
         margin-top: 0;
         margin-bottom: 20px;
+        .icon-holder  {
+            width: 30px;
+            height: 30px;
+            margin-right: 8px;
+            display: inline-block;
+            color: #fff;
+            @include border-radius(50%);
+            background: darken($theme-color, 15%);
+            text-align: center;
+            position: relative;
+            top: -3px;
+            .svg-inline--fa {
+	            font-size: 14px;
+	            margin-top: 6px;
+            }
+        }
+
     }
     .section {
         margin-bottom: 60px;
     }
 
-    .experiences-section, .educations-section {
+    .experiences-section {
         .item {
             margin-bottom: 30px;
         }
@@ -180,7 +194,7 @@ p {
         overflow: hidden;
         margin-bottom: 2px;
     }
-    .job-title, .degree {
+    .job-title {
         color: $text-color;
         font-size: 16px;
         margin-top: 0;
@@ -193,7 +207,7 @@ p {
         top: 0;
         color: $text-grey;
     }
-    .company, .university {
+    .company {
         margin-bottom: 10px;
         color: $text-grey;
     }
@@ -203,7 +217,6 @@ p {
         font-weight: 400;
         margin-top: 0;
         margin-bottom: 5px;
-	color: darken($theme-color, 15%);
     }
     .projects-section {
         .intro {
@@ -214,25 +227,6 @@ p {
         }
     }
 
-    .publication-title {
-        font-size: 16px;
-        font-weight: 400;
-        color: $text-color;
-        margin-bottom: 1px;
-    }
-    .publication-authors {
-        font-style: italic;
-        color: $text-grey;
-        margin-bottom: 1px;
-    }
-    .publications-section {
-        .intro {
-            margin-bottom: 30px;
-        }
-        .item {
-            margin-bottom: 15px;
-        }
-    }
 }
 
 
@@ -249,10 +243,11 @@ p {
     .level-bar {
         height: 12px;
         background: $smoky-white;
+        @include border-radius(2px);
     }
-    .level-bar-inner {
-        height: 12px;
-        background: lighten($theme-color, 15%);
+    
+    .theme-progress-bar {
+	    background: lighten($theme-color, 10%);
     }
 }
 
@@ -260,13 +255,13 @@ p {
 
 
 .footer {
-    padding-top: 30px;
+    padding: 30px;
+    padding-top: 60px;
     .copyright {
         line-height: 1.6;
         color: $text-color-secondary;
         font-size: 13px;
     }
-
     .fa-heart {
         color: $heart;
     }
