--- a/_sass/_responsive.scss
+++ b/_sass/_responsive.scss
@@ -1,9 +1,5 @@
-/* Extra small devices (phones, less than 768px) */
-@media (max-width: 767px) {
-
-    body{
-        padding: 0;
-    }
+// Small devices (landscape phones, less than 768px)
+@media (max-width: 767.98px) {
 
     .sidebar-wrapper {
         position: static;
@@ -26,13 +22,13 @@
 
 
 }
-/* Small devices (tablets, 768px and up) */
+// Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
 
 
 }
 
-/* Medium devices (desktops, 992px and up) */
+// Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
 
     .skillset .level-title {
@@ -42,24 +38,10 @@
         margin-bottom: 0;
     }
 
-    .skillset .level-bar {
-        display: inline-block;
-        width: 70%;
-        float: left;
-        position: relative;
-        top: 1px;
-    }
-
 
 }
 
-/* Large devices (large desktops, 1200px and up) */
+// Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
-
-}
-
-
-/* Ex-Large devices (large desktops, 1200px and up) */
-@media (min-width: 1400px) {
 
 }
