--- a/site/_includes/sidebar.html
+++ b/site/_includes/sidebar.html
@@ -1,33 +1,28 @@
-{% assign sidebar = site.data.data.sidebar %}
+{% assign sidebar = site.data.sidebar %}
 <div class="sidebar-wrapper">
+  {% include profile.html %}
 
-  <div class="profile-container">
+  {% if sidebar.contact %}
+    {% include contact.html %}
+  {% endif %}
 
-    {% if sidebar.name %}
-    <img class="avatar" src="{{ site.baseurl }}/assets/images/{{ sidebar.avatar }}" alt="profile picture" />
-    {% endif %}
-
-    {% if sidebar.name %}
-    <h1 class="name">{{ sidebar.name }}</h1>
-    {% endif %}
-
-    {% if sidebar.tagline %}
-    <h3 class="tagline">{{ sidebar.tagline }}</h3>
-    {% endif %}
-
-  </div><!--//profile-container-->
-
-  {% include contact.html %}
+  {% if sidebar.social %}
+    {% include social.html %}
+  {% endif %}
 
   {% if sidebar.education %}
     {% include education.html %}
   {% endif %}
 
-  {% include language.html %}
-  {% include interests.html %}
+  {% if sidebar.languages %}
+    {% include languages.html %}
+  {% endif %}
+
+  {% if sidebar.interests %}
+    {% include interests.html %}
+  {% endif %}
 
   {% if sidebar.about %}
     {% include about.html %}
   {% endif %}
-
 </div><!--//sidebar-wrapper-->
