--- a/site/_includes/experiences.html
+++ b/site/_includes/experiences.html
@@ -1,12 +1,12 @@
-{% assign experiences = site.data.data.experiences %}
+{% assign experiences = site.data.experiences %}
 {% if experiences %}
 <section class="section experiences-section">
   <h2 class="section-title">
     <span class="icon-holder"><i class="fas fa-briefcase"></i></span>
-    Experiences
+    {{ experiences.title }}
   </h2>
 
-  {% for experience in experiences %}
+  {% for experience in experiences.entries %}
   <div class="item">
 
     <div class="meta">
