--- a/site/_includes/languages.html
+++ b/site/_includes/languages.html
@@ -1,13 +1,13 @@
-{% assign languages = site.data.data.sidebar.languages %}
+{% assign languages = site.data.languages %}
 {% if languages %}
 <div class="languages-container container-block">
 
   <h2 class="container-block-title">
-    Languages
+    {{ languages.title }}
   </h2>
 
-  <ul class="list-unstyled interests-list">
-    {%for language in languages %}
+  <ul class="list-unstyled languages-list">
+    {%for language in languages.entries %}
     <li>
       {{ language.idiom }}
       <span class="lang-desc">({{ language.level }})</span>
