--- a/site/_includes/projects.html
+++ b/site/_includes/projects.html
@@ -1,4 +1,4 @@
-{% assign projects = site.data.data.projects %}
+{% assign projects = site.data.projects %}
 {% if projects %}
 <section class="section projects-section">
 
@@ -13,7 +13,7 @@
   </div><!--//intro-->
   {% endif %}
 
-  {% for project in projects.assignments %}
+  {% for project in projects.entries %}
     <div class="item">
 
       <span class="project-title">
