--- a/site/_themes/_base.scss
+++ b/site/_themes/_base.scss
@@ -32,7 +32,6 @@ p {
     background:$theme-color;
     max-width: 960px;
     margin: 0 auto;
-    margin-top: 30px;
     position: relative;
     @include box-shadow(0px 2px 4px rgba(0,0,0,0.1));
 }
@@ -167,6 +166,7 @@ p {
 .main-wrapper {
     background: #fff;
     padding: 60px;
+    padding-bottom: 30px;
     padding-right: 300px;
     .section-title {
         text-transform: uppercase;
@@ -259,7 +259,7 @@ p {
         background: $smoky-white;
         @include border-radius(2px);
     }
-    
+
     .theme-progress-bar {
 	    background: lighten($theme-color, 10%);
     }
@@ -269,8 +269,6 @@ p {
 
 
 .footer {
-    padding: 30px;
-    padding-top: 60px;
     .copyright {
         line-height: 1.6;
         color: $text-color-secondary;
